feat : change direct link icon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <link rel="icon" type="image/svg+xml" href="/src/assets/logo-man.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/img/logo-man.svg" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link href="./src/output.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
